# pytest-stubtester

./: README.md  pyproject.toml  ruff.toml
src/pytest_stubtester/: __init__.py  _collect.py  plugin.py
tests/: conftest.py  test_stubtester.py
