[project]
    dependencies    = ["pyochain>=0.5.52", "pytest>=9.0.2"]
    description     = "Pytest plugin for discovering and running doctests from Python stub files (.pyi)."
    name            = "pytest-stubtester"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.5.0"

    [project.entry-points.pytest11]
        stubtester = "pytest_stubtester.plugin"

[tool.uv]
    package = true

    [tool.uv.sources]
        pytest_stubtester = { workspace = true }

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.9.18"]
[tool.ruff]
    lint.ignore = [
        "A001",
        "A004",
        "C417",
        "COM812",
        "COM812",
        "CPY001",
        "D401",
        "E501",
        "FIX002",
        "PD003",
        "PLC0415",
        "PLC1901",
        "PLC2801",
        "PLR0904",
        "PLR2004",
        "S101",
        "S102",
        "S404",
        "S608",
        "SLF001",
        "T201",
        "T203",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    preview = true
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
    [tool.ruff.lint.per-file-ignores]
        "src/pql/sql/_code_gen/*.py" = [
            "A002",
            "ANN401",
            "FBT001",
            "FBT002",
            "PLR0913",
            "PLW1641",
        ]
        "t.py" = ["ANN201", "D100", "D101", "D103"]
        "tests/*" = ["D100", "D101", "D102", "D103", "D104", "DTZ001", "FBT001"]
    [tool.ruff.lint.isort]
        combine-as-imports = true

[dependency-groups]
    dev = [
    "basedpyright>=1.39.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "ruff>=0.14.9",
]
