[project]
    dependencies    = ["pyochain>=0.25.0", "pytest>=9.0.2"]
    description     = "Pytest plugin for discovering and running doctests from Python stub files (.pyi)."
    name            = "pytest-stubtester"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.7.0"

    [project.entry-points.pytest11]
        stubtester = "pytest_stubtester.plugin"

[dependency-groups]
    dev = ["pyrefly>=1.1.0", "pytest>=9.0.2", "ruff>=0.14.9", "sdsort>=0.5.0"]

[tool.uv]
    package = true

    [tool.uv.sources]
        pytest_stubtester = { workspace = true }

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.9.18"]


[tool.pyrefly]
    preset = "all"
