[project]
    dependencies    = ["pyochain>=0.26.0", "pytest>=9.1.1"]
    description     = "Pytest plugin for discovering and running doctests from Python stub files (.pyi)."
    name            = "pytest-stubtester"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.7.1"

    [project.entry-points.pytest11]
        stubtester = "pytest_stubtester.plugin"

[dependency-groups]
    dev = ["pyrefly>=1.1.1", "ruff>=0.15.19", "sdsort>=0.5.2"]

[tool.uv]
    package = true

    [tool.uv.sources]
        pytest_stubtester = { workspace = true }

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build==0.11.24"]


[tool.pyrefly]
    preset = "all"
